examples/errors/not_defined.sl
function a(): void => print(2);

b();